--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,10 @@ footer {
   #hexSighters .hexs {
     width: 100px;
     height: 100px; }
+  #hexSighters .hex {
+    fill: rgba(255, 255, 255, 0.2);
+    stroke: rgba(255, 255, 255, 0.4);
+    stroke-width: 1; }
   #hexSighters .precisions {
     position: absolute;
     top: 5px;
