--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,7 @@ footer {
 #container {
   position: absolute;
   width: $hexSighterWidth * 8 + $hexSighterMargin * 8 * 2;
-  height: $hexSighterWidth * 4 + $hexSighterMargin * 4 * 2 + $hexSighterMarginBottom + 70;
+  height: $hexSighterWidth * 4 + $hexSighterMargin * 4 * 2 + $hexSighterMarginBottom + 40;
   padding: 50px;
   margin: auto;
   top: 0;
@@ -136,6 +136,37 @@ footer {
   stroke-width: 1px;
   stroke: rgba( 255,255,255,0.2 );
   fill: rgba( 255,255,255,0.15 );
+}
+
+#container > div > svg {
+  fill: rgba( 255,255,255,0.4 );
+}
+.svg_container-corner_top-left {
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+.svg_container-corner_top-right {
+  top: 0;
+  right: 0;
+  position: absolute;
+}
+.svg_container-corner_bottom-right {
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+.svg_container-corner_bottom-left {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+
+  &:after {
+    content: 'p-00-002';
+    position: absolute;
+    bottom: 6px;
+    left: 6px;
+  }
 }
 
 #log {
