--- a/css/style.scss
+++ b/css/style.scss
@@ -84,7 +84,7 @@ footer {
 }
 #copyright {
   .saucer-web {
-    color:#000;
+    color: rgba( #faff00, 0.7 );
     text-decoration:none;
     &:hover {
       text-decoration:underline;
