footerの配置調整

--- a/css/style.scss
+++ b/css/style.scss
@@ -64,7 +64,8 @@ li {
 footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   text-align: center;
 }
 #container {
