--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ li {
 footer {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  left: 0;
+  right: 0;
   text-align: center; }
 
 #container {
