svg_triの配色調整

--- a/css/style.scss
+++ b/css/style.scss
@@ -133,9 +133,7 @@ footer {
   fill: rgba( 255,255,255,0.2 );
 }
 .svg_tri {
-  stroke-width: 1px;
-  stroke: rgba( 255,255,255,0.3 );
-  fill: none;
+  fill: rgba( 255,255,255,0.6 );
 }
 .svg_plus {
   fill: rgba( 255,255,255,0.2 );
