--- a/css/style.scss
+++ b/css/style.scss
@@ -121,8 +121,12 @@ footer {
 }
 .precisions {
   position:absolute;
-  top:5px;
-  left:5px;
+  top:3px;
+  left:6px;
+
+  li {
+    height: 1em;
+  }
 }
 .svg_rect {
   stroke-width: 1px;
