--- a/css/style.scss
+++ b/css/style.scss
@@ -68,6 +68,12 @@ footer {
   right: 0;
   text-align: center;
 }
+h1 {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  margin: 0;
+}
 #container {
   position: absolute;
   width: $hexSighterWidth * 8 + $hexSighterMargin * 8 * 2;
