h1周りのレイアウト調整

--- a/css/style.css
+++ b/css/style.css
@@ -52,8 +52,8 @@ footer {
 
 h1 {
   position: absolute;
-  top: 5px;
-  left: 10px;
+  top: -10px;
+  left: 0;
   margin: 0; }
 
 #container {
@@ -126,7 +126,8 @@ h1 {
 .svg_container-corner_top-left {
   top: 0;
   left: 0;
-  position: absolute; }
+  position: absolute;
+  display: none; }
 
 .svg_container-corner_top-right {
   top: 0;
@@ -150,5 +151,5 @@ h1 {
 
 #log {
   position: absolute;
-  top: 34px;
-  left: 10px; }
+  top: 29px;
+  left: 0; }
