--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,8 @@ h1 {
   margin-top: 2px;
   margin-bottom: 22px;
   position: relative;
-  counter-increment: hexs-count; }
+  counter-increment: hexs-count;
+  -webkit-transform: translate3d(0, 0, 0); }
   .hexSighters > li:after {
     content: "00-" counter(hexs-count);
     position: absolute;
