--- a/css/style.scss
+++ b/css/style.scss
@@ -110,6 +110,7 @@ h1 {
     margin-bottom: $hexSighterMarginBottom;
     position:relative;
     counter-increment: hexs-count;
+    -webkit-transform: translate3d(0,0,0);
 
     &:after {
       content: '00-' counter( hexs-count );
